Finished with HTML structure

--- a/index.html
+++ b/index.html
@@ -10,5 +10,36 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      I love soccer and started playing when I was 5 years old. I like watching
+      it and playing it, It taught me that in order score a goal you need
+      teamwork. I would describe myself as someone who loves learning, I enjoy
+      learning new things and also reading books.
+    </p>
+
+    <h1>I'm Jefferson Huisa</h1>
+
+    <i class="fas fa-quote-right"></i>
+
+    <ul>
+      <h3>Skills</h3>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>ReactJS</li>
+      <li>NodeJS</li>
+      <li>MONGODB</li>
+    </ul>
+
+    <a href="#">
+      08 9200 4000 <br />
+      hello@jeff-huisa.com
+    </a>
+
+    <h2>
+      <span>Web</span> <br />
+      <span>Development</span>
+    </h2>
+  </body>
 </html>
