Styled the icon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <p>
       I love soccer and started playing when I was 5 years old. I like watching
       it and playing it, It taught me that in order score a goal you need
-      teamwork. I would describe myself as someone who loves learning, I enjoy
-      learning new things and also reading books.
+      teamwork. I would describe myself as someone who loves learning.
     </p>
 
     <h1>I'm Jefferson Huisa</h1>
